tests/let-bindings/structural-patterns/ill-typed/test-1-1.stella
language core;

extend with #let-bindings, #let-patterns, #structural-patterns, #pairs;

fn main(n : Nat) -> Nat {
  return
  	let {x, y} = {true, 0} in
    if y then x else succ(x)
}
